--- a/primer.html
+++ b/primer.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
 <html>
-    
+ <head></head>
+ <body>
+    Ovo je moja prva stranica.
+    Ovo je drugi paragraf.
+ </body>
 </html>
