--- a/primer1.html
+++ b/primer1.html
@@ -9,7 +9,7 @@
     <h5>Ovo je zaglavlje 5</h5>
     <h6>Ovo je zaglavlje 6</h6>
 
-    <p>Ovo je paragraf 1</p>
+    <p>Ovo je paragraf 1<br/>Ovo je posle preloma</p>
     <p>Ovo je paragraf 2</p>
     
  </body>
