--- a/primer1.html
+++ b/primer1.html
@@ -13,6 +13,13 @@
     Ovo je posle preloma
    </p>
     <p>Ovo je paragraf 2</p>
+    <p>Ovo je paragraf sa <b>pojacanim delom.</b></p>
+    <p>Ovo je paragraf sa <i>delom</i> </p>
+    <p>Ovo je paragraf sa <u>podvucenim delom</u></p>
+    <p>Ovo je paragraf sa <strong>pojacanim delom.</strong></p>
+    <p>Ovo je paragraf sa <s>precrtanim delom.</s></p>
+    <p>Ovo je paragraf sa <del>precrtanim delom.</del></p>
+    
     
  </body>
 </html>
