--- a/primer1.html
+++ b/primer1.html
@@ -12,6 +12,7 @@
     <p>Ovo je paragraf 1<br/>
     Ovo je posle preloma
    </p>
+   <hr/>
     <p>Ovo je paragraf 2</p>
     <p>Ovo je paragraf sa <b>pojacanim delom.</b></p>
     <p>Ovo je paragraf sa <i>delom</i> </p>
@@ -19,8 +20,13 @@
     <p>Ovo je paragraf sa <strong>pojacanim delom.</strong></p>
     <p>Ovo je paragraf sa <s>precrtanim delom.</s></p>
     <p>Ovo je paragraf sa <del>precrtanim delom.</del></p>
+    <address>
+      <h3>Milos Jakic</h3>
+      <p>Stevana Sindjelica 49</p>
+      <p>Sremska Mitrovica</p>
+    </address>
+    <p>Lets meet at <mark>SM</mark></p>
     
-
     
  </body>
 </html>
