--- a/primer1.html
+++ b/primer1.html
@@ -22,7 +22,7 @@
     <p>Ovo je paragraf sa <del>precrtanim delom.</del></p>
     <address>
       <h3>Milos Jakic</h3>
-      <p>Stevana Sindjelica 49</p>
+      <p><mark>Sindjelica 49</mark> v</p>
       <p>Sremska Mitrovica</p>
     </address>
     <p>Lets meet at <mark>SM</mark></p>
