--- a/primer1.html
+++ b/primer1.html
@@ -2,6 +2,7 @@
 <html>
  <head></head>
  <body>
+  <a href="./primer5.html">PRIMER 5</a>
     <h1>Ovo je zaglavlje 1</h1>
     <h2>Ovo je zaglavlje 2</h2>
     <h3>Ovo je zaglavlje 3</h3>
