--- a/primer4.html
+++ b/primer4.html
@@ -10,7 +10,7 @@
         target="_blank">GOOGLE</a> 
       </p>
       <p>
-        <a href="./primer1.html"></a>
+        <a href="./primer1.html">STRANICA 1</a>
     </p>
     </body>
 </html>
