--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
 
 </head>
 <body>
-	<h1>Ovo je test</h1>
-	<h2>Test2</h2>
+    <header>
+        <h1>Ovo je test</h1>
+        <h2>Test2</h2>
+        <nav role="main">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+	<main>
+        <h1>Naslov stranice</h1>
+        <p>Abstraktni deo za stranicu</p>
+        <section>
+            <h2>Podsekcija</h2>
+            <p>Sadrzaj</p>       
+        </section>
+        <aside>
+            <h3>Dopunski</h3>
+        </aside>
+    </main>
+    <footer>© Milos</footer>
 </body>
 </html>
