--- a/Links/htmlcompany/aboutus/our-team/jane-doe.html
+++ b/Links/htmlcompany/aboutus/our-team/jane-doe.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jane Doe</title>
 </head>
 <body>
-    
+    <h1>Jane Doe</h1>
+    <a href="../../index.html">Back to main page</a>
+    <a href="../../services/index.html">services</a>
 </body>
 </html>
