--- a/Links/index.html
+++ b/Links/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main Page</title>
 </head>
 <body>
-    
+    <h1>Main Page</h1>
+    <a href="./htmlcompany/aboutus/our-team/john-doe.html">John Doe</a>
 </body>
 </html>
