--- a/HTMLCSS/html_css_4/primer2.html
+++ b/HTMLCSS/html_css_4/primer2.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jane Doe</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Jane Doe</h1>
-    <a href="../../index.html">Back to main page</a>
-    <a href="../../services/index.html">services</a>
+    <h1 style="color:blue; text-transform: uppercase;">Zaglavlje</h1>
 </body>
 </html>
