--- a/Fundamentals/14_first_layout/basic+sidebar/index.html
+++ b/Fundamentals/14_first_layout/basic+sidebar/index.html
@@ -24,9 +24,9 @@
         <a href="#">About Us</a>
         <a href="#">Contact</a>
     </nav>
-
+    <h1>Home</h1>
     <section>
-        <h1>Home</h1>
+       <h2>Main content</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget dolor eget libero aliquam 
             hendrerit. Aliquam hendrerit condimentum blandit. Maecenas facilisis arcu vitae sem 
             eleifend, eu volutpat libero rutrum. Morbi rhoncus mauris eget laoreet placerat. Fusce vel 
@@ -38,7 +38,14 @@
             eu odio.</p>
  
         </section>
-
+<aside><h2>Side content</h2>
+    <p>Integer ultricies, sem eget volutpat commodo, massa justo iaculis sem, sit amet 
+        tempor dui lorem tristique elit. Phasellus nec ornare augue, quis scelerisque diam. 
+        Curabitur accumsan, lectus quis accumsan dictum, ligula sem fringilla enim, a rhoncus 
+        justo urna eu odio.
+ 
+    </p>
+</aside>
     <footer>
         Copyright © Link Group
     </footer>
