--- a/Fundamentals/14_first_layout/basic+sidebar/index.html
+++ b/Fundamentals/14_first_layout/basic+sidebar/index.html
@@ -11,6 +11,20 @@
         width: 960px;
         margin: 20px auto;
     }
+
+    section {
+        display: inline-block;
+        width: 600px
+        
+        
+    }
+
+    aside {
+        display: inline-block;
+        width: 344px;
+        vertical-align: top;
+        padding: 0 0 0 8px;
+    }
 </style>
 
 </head>
@@ -37,8 +51,8 @@
             accumsan, lectus quis accumsan dictum, ligula sem fringilla enim, a rhoncus justo urna 
             eu odio.</p>
  
-        </section>
-<aside><h2>Side content</h2>
+        </section><aside>
+            <h2>Side content</h2>
     <p>Integer ultricies, sem eget volutpat commodo, massa justo iaculis sem, sit amet 
         tempor dui lorem tristique elit. Phasellus nec ornare augue, quis scelerisque diam. 
         Curabitur accumsan, lectus quis accumsan dictum, ligula sem fringilla enim, a rhoncus 
