--- a/HTMLCSS/html_css_5/primer2.html
+++ b/HTMLCSS/html_css_5/primer2.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="e1">1</div>
+    <div id="e2">2</div>
+    <div id="e3">3</div>
 </body>
 </html>
