--- a/HTMLCSS/html_css_5/primer3.html
+++ b/HTMLCSS/html_css_5/primer3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tok Elementa</title>
+    <title>Pozicioniranje</title>
     <style>
         #e1, #e2, #e3 {
             width: 100px;
@@ -14,9 +14,12 @@
             font-size: 48px;
             text-align: center;
             border: 1px solid black;
-            display: inline;
-            padding: 20px;
-            margin-right: 10px;
+
+        }
+        #e2 {
+            position: fixed;
+           left: 120px;
+           top: 10px;
         }
     </style>
 </head>
