--- a/zadaci/cssHTML/index.html
+++ b/zadaci/cssHTML/index.html
@@ -4,29 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mihajlo Pupin</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img height="150" width="600" src="./images/pupinHeader.jpg">
-    </header>
-    <nav>
-        <h1>Meni</h1>
-        <ul>
-            <li>Main page</li>
-            <li><a href="./pages/elife.html">Early life and education</a></li>
-            <li><a href="./pages/lwork.html">Literary work</a></li>
-            <li><a href="./pages/pcoils.html">Pupin coils</a></li>
-        </ul>
-    </nav><section>
-        <h1>Mihajlo Idvorski Pupin</h1>
-        <img src="./images/pupin.jpg"> 
-        <p><strong>Mihajlo Idvorski Pupin, Ph.D., LL.D. (Serbian Cyrillic: Михајло Идворски Пупин; 9 October 1858 – 12 March 1935)</strong>, 
-            also known as Michael I. Pupin, was a Serbian American physicist and physical chemist.</p>
-        <p>Pupin is best known for his numerous patents, including a means of greatly extending the range of long-distance telephone communication 
-            by placing loading coils (of wire) at predetermined intervals along the transmitting wire (known as "pupinization").</p>
-        <p>Pupin was a founding member of National Advisory Committee for Aeronautics (NACA) on March 3, 1915, which later became NASA.</p>
-    </section>
+    <div id="main">
+    <div id="nav">
+    <a href="index.html">Main page</a>
+    <a href="./pages/elife.html">Early life and education</a>
+    <a href="./pages/lwork.html">Literary work</a>
+    <a href="./pages/pcoils.html">Pupin coils</a>
+    </div>
+    <div id="article">
+        <h1 style="font-size:2vw">Mihajlo Idvorski Pupin</h1>
+        <br>
+    <img src="./images/pupin.jpg"> 
+    <p><strong>Mihajlo Idvorski Pupin, Ph.D., LL.D. (Serbian Cyrillic: Михајло Идворски Пупин; 9 October 1858 – 12 March 1935)</strong>, 
+        also known as Michael I. Pupin, was a Serbian American physicist and physical chemist.</p>
+    <p>Pupin is best known for his numerous patents, including a means of greatly extending the range of long-distance telephone communication 
+        by placing loading coils (of wire) at predetermined intervals along the transmitting wire (known as "pupinization").</p>
+    <p>Pupin was a founding member of National Advisory Committee for Aeronautics (NACA) on March 3, 1915, which later became NASA.</p>
+    </div>
+    </div>
+    
 </body>
 </html>
