--- a/zadaci/cssHTML/pages/lwork.html
+++ b/zadaci/cssHTML/pages/lwork.html
@@ -5,26 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mihajlo Pupin</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <ul>
-        <li><a href="../index.html">Main page</a></li>
-        <li><a href="elife.html">Early life and education</a></li>
-        <li>Literary work</li>
-        <li><a href="pcoils.html">Pupin coils</a></li>
-    </ul>
-<hr/>
-<h1>Literary work</h1>
-<p>Besides his patents he published several dozen scientific disputes, articles, reviews and a 396-page autobiography under the name Michael Pupin, From Immigrant to Inventor (Scribner's, 1923). He won the annual Pulitzer Prize for Biography or Autobiography. It was published in Serbian in 1929 under the title From pastures to scientist (Od pašnjaka do naučenjaka). </p>
-<p><strong>Beside this he also published:</strong></p>
-<ul>
-    <li>Pupin Michael: Der Osmotische Druch und seine Beziehung zur Freien Energie, Inaugural Dissertation zur Erlangung der Doctorwurde, Buchdruckerei von Gustav Shade, Berlin, June, 1889.</li>
-    <li>Pupin Michael: Thermodynamics of Reversible Cycles in Gases and Saturated Vapors, John Wiley & Sons. 1894.</li>
-    <li>Pupin Michael: Serbian Orthodox Church, J. Murray. London, 1918.</li>
-    <li>Pupin Michael: Yugoslavia. (In Association for International Conciliation Amer. Branch —Yugoslavia). American Association for International Conciliation. 1919.</li>
-    <li>Pupin Michael: The New Reformation; from Physical to Spiritual Realities, Scribner, New York, 1927.</li>
-    <li>Pupin Michael: Romance of the Machine, Scribner, New York, 1930.</li>
-    <li>Pupin Michael: Discussion by M. Pupin and other prominent engineers in “Toward Civilization, edited by C. A. Beard. Longmans, Green& Co. New York, 1930.</li>
-</ul>
+    <div id="main">
+    <div id="nav">
+    <a href="../index.html">Main page</a>
+    <a href="elife.html">Early life and education</a>
+    <a href="lwork.html">Literary work</a>
+    <a href="pcoils.html">Pupin coils</a>
+
+    </div>
+    <div id="article">
+        <h1 style="font-size:2vw">Literary work</h1>
+        <br>
+        <p>Besides his patents he published several dozen scientific disputes, articles, reviews and a 396-page autobiography under the name Michael Pupin, From Immigrant to Inventor (Scribner's, 1923). He won the annual Pulitzer Prize for Biography or Autobiography. It was published in Serbian in 1929 under the title From pastures to scientist (Od pašnjaka do naučenjaka). </p>
+        <br>
+        <p><strong>Beside this he also published:</strong></p>
+        <br>
+        <table style="text-align: left;">
+            <tr id="heading">
+              <th>Naslov</th>
+              <th>Izdavač</th>
+              <th>Mesto</th>
+              <th>Godina</th>
+            </tr>
+            <tr class="even">
+              <td>Der Osmotische Druch und seine Beziehung zur Freien Energie</td>
+              <td>Buchdruckerei von Gustav Shade</td>
+              <td>Berlin</td>
+              <td>1889</td>
+            </tr>
+            <tr>
+              <td>Thermodynamics of Reversible Cycles in Gases and Saturated Vapors</td>
+              <td>John Wiley & Sons</td>
+              <td>Berlin</td>
+              <td>1894.</td>
+            </tr>
+            <tr class="even">
+              <td>Serbian Orthodox Church</td>
+              <td>J. Murray</td>
+              <td>London</td>
+              <td>1918</td>
+            </tr>
+            <tr>
+              <td>Yugoslavia. (In Association for International Conciliation Amer. Branch —Yugoslavia)</td>
+              <td> American Association for International Conciliation</td>
+              <td>New York</td>
+              <td>1919</td>
+            </tr>
+            <tr class="even">
+              <td>The New Reformation; from Physical to Spiritual Realities</td>
+              <td>Scribner</td>
+              <td>New York</td>
+              <td>1927</td>
+            </tr>
+          </table>
+    </div>
+    </div>
+    
 </body>
 </html>
