--- a/JSF/07_functions.html
+++ b/JSF/07_functions.html
@@ -24,7 +24,13 @@
 
     sayHello(Adam); */
 
-    
+    function myFunction(...arguments) {
+console.log(arguments);
+}
+
+myFunction(1, 2, 3, 4);
+
+
   </script>
 </body>
 </html>
