--- a/zadaci/zapremina/index.html
+++ b/zadaci/zapremina/index.html
@@ -9,6 +9,7 @@
 <script>
 
 var r = parseFloat(prompt("Please enter radius:"));
+var h = parseFloat(prompt("Please enter radius:"));
 var p = Math.pow(r, 2) * Math.PI;
 alert("The surface of the circle is " + p.toFixed(2));
 
