--- a/zadaci/zapremina/index.html
+++ b/zadaci/zapremina/index.html
@@ -8,10 +8,10 @@
 <body>
 <script>
 
-var r = parseFloat(prompt("Please enter radius:"));
-var h = parseFloat(prompt("Please enter radius:"));
-var p = Math.pow(r, 2) * Math.PI;
-alert("The surface of the circle is " + p.toFixed(2));
+var r = parseFloat(prompt("Unesite poluprečnik osnove valjka:"));
+var h = parseFloat(prompt("Unesite visnu valjka:"));
+var p = Math.pow(r, 2) * h * Math.PI;
+alert("Zapremina valjka iznosi: " + p.toFixed(2));
 
 </script>
 </body>
