--- a/zadaci/zapremina/index.html
+++ b/zadaci/zapremina/index.html
@@ -10,7 +10,7 @@
 
 var r = parseFloat(prompt("Unesite poluprečnik osnove valjka:"));
 var h = parseFloat(prompt("Unesite visnu valjka:"));
-var p = Math.pow(r, 2) * h * Math.PI;
+var z = Math.pow(r, 2) * h * Math.PI;
 alert("Zapremina valjka iznosi: " + p.toFixed(2));
 
 </script>
