--- a/zadaci/Calculator/index.html
+++ b/zadaci/Calculator/index.html
@@ -33,7 +33,7 @@
     rezultat = prviBroj / drugiBroj;
     }
 
-    alert(rezultat);
+    alert('Dobijena vrednost:' + rezultat);
    </script>
 </body>
 </html>
