--- a/jsf_1/primeri7.html
+++ b/jsf_1/primeri7.html
@@ -8,11 +8,9 @@
 </head>
 <body>
     <script>
-    let arr = [[1,1,1],[2,2,2],[3,3,3],[4,4,4],[5,5,5]];
-    console.log(arr[0])
-
+       const a = prompt("Unesite prvi broj")
+       const b = prompt("Unesite drugi broj")
+       
     </script>
-    
-
 </body>
 </html>
