--- a/zadaci/zapremina/index.html
+++ b/zadaci/zapremina/index.html
@@ -8,9 +8,9 @@
 <body>
 <script>
 
-var r = parseFloat(prompt("Unesite poluprečnik osnove valjka:"));
-var h = parseFloat(prompt("Unesite visnu valjka:"));
-var z = Math.pow(r, 2) * h * Math.PI;
+let r = parseFloat(prompt("Unesite poluprečnik osnove valjka:"));
+let h = parseFloat(prompt("Unesite visnu valjka:"));
+let z = Math.pow(r, 2) * h * Math.PI;
 alert("Zapremina valjka iznosi: " + z.toFixed(2));
 
 </script>
