--- a/websitebuild/01_bootstrap_intro/index.html
+++ b/websitebuild/01_bootstrap_intro/index.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Intro</title>
 </head>
+<link rel="stylesheet" href="css/bootstrap.min.css">
 <body>
-    
+<p1>Proba!</p1>
+<button type="button">Standard Button</button>
+
+<button type="button" class="btn btn-primary">Bootstrap Button</button>
+
+<script src="js/jquery-3.6.4.slim.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
