--- a/Vezba/Bodovi/Lista.html
+++ b/Vezba/Bodovi/Lista.html
@@ -22,9 +22,42 @@
       tr:nth-child(even) {
         background-color: #f2f2f2;
       }
+
+      ul {
+        width: auto;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
+
+      li {
+        float: left;
+      }
+
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      li a:hover {
+        background-color: #111;
+      }
+
     </style>
   </head>
   <body>
+
+    <ul>
+      <li><a href="./index.html">Admin</a></li>
+      <li><a href="./Lista.html">Lista radnika</a></li>
+      <li><a href="./bodovi.html">Bodovi</a></li>
+    </ul>
+
     <input type="text" id="search" placeholder="Search...">
     <table id="peopleTable">
       <thead>
