--- a/Vezba/Bodovi/index.html
+++ b/Vezba/Bodovi/index.html
@@ -6,9 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bodovi</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* CSS styling for the menu */
+        ul {
+          width: auto;
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          background-color: #333;
+        }
+  
+        li {
+          float: left;
+        }
+  
+        li a {
+          display: block;
+          color: white;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+        }
+  
+        li a:hover {
+          background-color: #111;
+        }
+      </style>
     
 </head>
 <body>
+    <ul>
+        <li><a href="./index.html">Admin</a></li>
+        <li><a href="./Lista.html">Lista radnika</a></li>
+        <li><a href="./bodovi.html">Bodovi</a></li>
+      </ul>
     <div id="flexbox1">
     <div id="enterDetails" style="order: 3;">
         <h1>Unesite podatke:</h1>
