--- a/Vezba/boot/index.html
+++ b/Vezba/boot/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="col-md-3">
               <div class="card">
-                <img class="card-img-top" src="./images/icon-1.png" alt="Surf">
+                <img class="card-img-top" style="width: 60px; height: 60px;" src="./images/icon-2.png" alt="Surf">
                 <div class="card-body">
                   <h5 class="card-title">Image 2 Title</h5>
                   <p class="card-text">Some description about Image 2.</p>
