--- a/Vezba/boot/index.html
+++ b/Vezba/boot/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Example</title>
+    <title>My Website</title>
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
@@ -21,22 +21,22 @@
               <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Staff</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#">Download</a>
             </li>
           </ul>
         </div>
@@ -44,7 +44,7 @@
       <div class="jumbotron" style="background-image: url('./images/hero.jpg'); background-size: contain;  background-repeat: no-repeat; height: 400px;">
             <h5 class="bg-success d-inline-block text-center text-white">We strive to make all of our creations exqusite</h5>
          </div>
-         <div class="container">
+         <div class="icon">
           <h5>RECENT WORK</h5>
           <div class="line-over-page">
           <div class="row">
@@ -52,8 +52,8 @@
               <div class="card-body text-center">
                 <img class="card-img-top-ico"  src="./images/icon-1.png" alt="Bike">
                 <div class="card-body">
-                  <h5 class="card-title">Image 1 Title</h5>
-                  <p class="card-text">Some description about Image 1.</p>
+                  <h5 class="card-title">Purpose</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a sollicitudin odio, sed feugiat ipsum. </p>
                 </div>
               </div>
             </div>
@@ -61,8 +61,8 @@
               <div class="card-body text-center">
                 <img class="card-img-top-ico" src="./images/icon-2.png" alt="Surf">
                 <div class="card-body">
-                  <h5 class="card-title">Image 2 Title</h5>
-                  <p class="card-text">Some description about Image 2.</p>
+                  <h5 class="card-title">Quality</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a sollicitudin odio, sed feugiat ipsum. </p>
                 </div>
               </div>
             </div>
@@ -70,8 +70,8 @@
               <div class="card-body text-center">
                 <img class="card-img-top-ico" src="./images/icon-3.png" alt="Image 3">
                 <div class="card-body">
-                  <h5 class="card-title">Image 3 Title</h5>
-                  <p class="card-text">Some description about Image 3.</p>
+                  <h5 class="card-title">Function</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a sollicitudin odio, sed feugiat ipsum. </p>
                 </div>
               </div>
             </div>
@@ -79,8 +79,8 @@
               <div class="card-body text-center">
                 <img class="card-img-top-ico" src="./images/icon-4.png" alt="Image 4">
                 <div class="card-body">
-                  <h5 class="card-title">Image 4 Title</h5>
-                  <p class="card-text">Some description about Image 4.</p>
+                  <h5 class="card-title">Elegant</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a sollicitudin odio, sed feugiat ipsum. </p>
                 </div>
               </div>
             </div>
@@ -88,7 +88,7 @@
         </div>
         <br>
         <br>
-          <div class="container">
+          <div class="work">
             <h5>RECENT WORK</h5>
             <div class="line-over-page">
             <div class="row">
@@ -96,8 +96,8 @@
                 <div class="card">
                   <img class="card-img-top" src="./images/bike-400x340.jpg" alt="Bike">
                   <div class="card-body">
-                    <h5 class="card-title">Image 1 Title</h5>
-                    <p class="card-text">Some description about Image 1.</p>
+                    <h5 class="card-title">Green Bike</h5>
+                    <p class="card-text">Beautiful, Travel</p>
                   </div>
                 </div>
               </div>
@@ -105,8 +105,8 @@
                 <div class="card">
                   <img class="card-img-top" src="./images/surf-400x340.jpg" alt="Surf">
                   <div class="card-body">
-                    <h5 class="card-title">Image 2 Title</h5>
-                    <p class="card-text">Some description about Image 2.</p>
+                    <h5 class="card-title">Salt Of The Earth</h5>
+                    <p class="card-text">Beautiful, Travel</p>
                   </div>
                 </div>
               </div>
@@ -114,16 +114,16 @@
                 <div class="card">
                   <img class="card-img-top" src="./images/hills-400x340.jpg" alt="Image 3">
                   <div class="card-body">
-                    <h5 class="card-title">Image 3 Title</h5>
-                    <p class="card-text">Some description about Image 3.</p>
+                    <h5 class="card-title">Mountain High</h5>
+                    <p class="card-text">Travel</p>
                   </div>
                 </div>
               </div>  <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="card">
                   <img class="card-img-top" src="./images/path-400x340.jpg" alt="Image 4">
                   <div class="card-body">
-                    <h5 class="card-title">Image 4 Title</h5>
-                    <p class="card-text">Some description about Image 4.</p>
+                    <h5 class="card-title">When A Tree Falls</h5>
+                    <p class="card-text">Beautiful</p>
                   </div>
                 </div>
               </div>
@@ -132,7 +132,7 @@
         </div>
         <br>
         <br>
-        <div class="container">
+        <div class="blog">
           <h5>FROM THE BLOG</h5>
           <div class="line-over-page">
           <div class="row">
@@ -140,8 +140,9 @@
               <div class="card">
                 <img class="card-img-top" src="./images/cow-640x340.jpg" alt="Image 1">
                 <div class="card-body">
-                  <h5 class="card-title">Image 1 Title</h5>
-                  <p class="card-text">Some description about Image 1.</p>
+                  <h5 class="card-title">How Now</h5>
+                  <p class="card-text">Posted on october 28, 2020</p>
+                  <p class="card-text"><p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a sollicitudin odio, sed feugiat ipsum.</p>
                 </div>
               </div>
             </div>
@@ -149,8 +150,9 @@
               <div class="card">
                 <img class="card-img-top" src="./images/sunrise-640x340.jpg" alt="Image 2">
                 <div class="card-body">
-                  <h5 class="card-title">Image 2 Title</h5>
-                  <p class="card-text">Some description about Image 2.</p>
+                  <h5 class="card-title">Adrift by Simon Christen</h5>
+                  <p class="card-text">Posted on Sertember 29, 2020</p>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a sollicitudin odio, sed feugiat ipsum. </p>
                 </div>
               </div>
             </div>
@@ -158,8 +160,9 @@
               <div class="card">
                 <img class="card-img-top" src="./images/grass-640x340.jpg" alt="Image 3">
                 <div class="card-body">
-                  <h5 class="card-title">Image 3 Title</h5>
-                  <p class="card-text">Some description about Image 3.</p>
+                  <h5 class="card-title">A Walk In The Park</h5>
+                  <p class="card-text">Posted on August 10, 2020</p>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a sollicitudin odio, sed feugiat ipsum.</p>
                 </div>
               </div>
             </div>
@@ -178,21 +181,21 @@
             <div class="col-md-4">
               <h5>Recent Posts</h5>
               <ul class="list-unstyled">
-                <li><a href="#" class="text-muted">Post 1</a></li>
-                <li><a href="#" class="text-muted">Post 2</a></li>
-                <li><a href="#" class="text-muted">Post 3</a></li>
-                <li><a href="#" class="text-muted">Post 4</a></li>
-                <li><a href="#" class="text-muted">Post 4</a></li>
+                <li><a href="#" class="text-muted">How Now</a></li>
+                <li><a href="#" class="text-muted">Adrift by Simon Christen</a></li>
+                <li><a href="#" class="text-muted">A Walk In The Park</a></li>
+                <li><a href="#" class="text-muted">Time To Think</a></li>
+                <li><a href="#" class="text-muted">Field Of Dreams</a></li>
               </ul>
             </div>
             <div class="col-md-4">
               <h5>Recent Works</h5>
               <ul class="list-unstyled">
-                <li><a href="#" class="text-muted">Work 1</a></li>
-                <li><a href="#" class="text-muted">Work 2</a></li>
-                <li><a href="#" class="text-muted">Work 3</a></li>
-                <li><a href="#" class="text-muted">Work 4</a></li>
-                <li><a href="#" class="text-muted">Work 4</a></li>
+                <li><a href="#" class="text-muted">Beautiful</a></li>
+                <li><a href="#" class="text-muted">Travel</a></li>
+                <li><a href="#" class="text-muted">Surreal</a></li>
+                <li><a href="#" class="text-muted">Thoughts</a></li>
+                <li><a href="#" class="text-muted">Unique</a></li>
               </ul>
             </div>
           </div>
@@ -203,7 +206,7 @@
           <p>@2020 ITAcademy</p>
         </div>
     </div>
-    
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
