--- a/websitebuild/02_bootstrap_grid/index.html
+++ b/websitebuild/02_bootstrap_grid/index.html
@@ -5,8 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                row 1, column 1
+            </div>
+            <div class="col">
+                row 1, column 2
+            </div>
+            <div class="col">
+                row 1, column 3
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                row 2, column 1
+            </div>
+            <div class="col">
+                row 2, column 2
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                row 3, column 1
+            </div>
+            <div class="col">
+                row 3, column 2
+            </div>
+            <div class="col">
+                row 3, column 3
+            </div>
+            <div class="col">
+                row 3, column 4
+            </div>
+        </div>
+    </div>
+<script src="js/jquery-3.6.4.slim.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
