--- a/websitebuild/02_bootstrap_grid/index.html
+++ b/websitebuild/02_bootstrap_grid/index.html
@@ -11,39 +11,18 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-2">
                 row 1, column 1
             </div>
-            <div class="col">
+            <div class="col-5">
                 row 1, column 2
             </div>
-            <div class="col">
+            <div class="col-5">
                 row 1, column 3
             </div>
         </div>
-        <div class="row">
-            <div class="col">
-                row 2, column 1
-            </div>
-            <div class="col">
-                row 2, column 2
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                row 3, column 1
-            </div>
-            <div class="col">
-                row 3, column 2
-            </div>
-            <div class="col">
-                row 3, column 3
-            </div>
-            <div class="col">
-                row 3, column 4
-            </div>
-        </div>
-    </div>
+        
+       
 <script src="js/jquery-3.6.4.slim.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
