--- a/Vezba/boot/index.html
+++ b/Vezba/boot/index.html
@@ -46,7 +46,7 @@
               </div>
             </div>
             <div class="col-md-3">
-              <div class="card">
+              <div class="card-body text-center">
                 <img class="card-img-top" style="width: 60px; height: 60px;" src="./images/icon-2.png" alt="Surf">
                 <div class="card-body">
                   <h5 class="card-title">Image 2 Title</h5>
