--- a/zadaci/DOM/index.html
+++ b/zadaci/DOM/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -36,7 +36,7 @@
     user.addEventListener('keyup',function(){
     let u_times = document.querySelector('.u_times');
     let u_check = document.querySelector('.u_check');
-    
+
     if (user.value !== 'new_user') {
     user.style.border = '2px solid red';
     u_times.style.display = 'block';
