--- a/zadaci/DOM/index.html
+++ b/zadaci/DOM/index.html
@@ -32,7 +32,7 @@
     </div>
     
     <script>
-    let user = document.querySelector('#username');
+    let user = document.getElementById('username');
     user.addEventListener('keyup',function(){
     let u_times = document.querySelector('.u_times');
     let u_check = document.querySelector('.u_check');
@@ -49,7 +49,7 @@
     }
     })
 
-    let pass = document.querySelector('#password');
+    let pass = document.getElementById('password');
     pass.addEventListener('keyup',function(){
     let p_times = document.querySelector('.p_times');
     let p_check = document.querySelector('.p_check');
