--- a/adv_js/01_objects/index.html
+++ b/adv_js/01_objects/index.html
@@ -27,24 +27,24 @@
         
         // Kreiranje objekata korišćenjem konstruktorske funkcije Object()
 
-        function Car(make, model, weight, color) {
+        function Car(make, model, weight, color) { // konstruktorska funkcija
             this.make = make;
             this.model = model;
             this.weight = weight;
             this.color = color;
 
-            this.startEngine = function() {
+            this.startEngine = function() {               // Funkcija
                 return "Engine of" + this.make + " " + this.model + "started"
             }
         }
 
-        var subaryLegacy = new Car("Subary", "Legacy", 1560, "black");
+        var subaryLegacy = new Car("Subary", "Legacy", 1560, "black");  // objekt
         var fordTaurus = new Car("Ford", "Taurus", 1876, "blue");
         var porschePanamera = new Car("Porsche", "Panamera", 1963, "grey")
            
 
 
-        console.log(subaryLegacy.startEngine())
+        console.log(subaryLegacy.startEngine()) // Poziv funkcije
 
     </script>
 </body>
