--- a/adv_js/01_objects/index.html
+++ b/adv_js/01_objects/index.html
@@ -27,6 +27,7 @@
         
         // Kreiranje objekata korišćenjem konstruktorske funkcije Object()
 
+        // Najbolja
         function Car(make, model, weight, color) { // konstruktorska funkcija
             this.make = make;
             this.model = model;
